--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -18,6 +18,11 @@ apply from: '../build.dependencies.gradle'
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
+    compileSdk 36
+    defaultConfig {
+        minSdk 24
+    }
+
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
@@ -25,4 +30,6 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation "com.bylazar:fullpanels:1.0.5"
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.6'
 }
